meta-lead-ads-package/main/default/objects/Meta_AdSet_Analytics__c/Meta_AdSet_Analytics__c.object-meta.xml
<CustomObject>
    <label>Meta AdSet Analytics</label>
    <pluralLabel>Meta AdSet Analytics</pluralLabel>
    <nameField>
        <displayFormat>MSA-{000000}</displayFormat>
        <label>AdSet Analytics Record</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>