meta-lead-ads-package/main/default/objects/Meta_AdSet_Analytics__c/fields/Ad_Set_Id__c.field-meta.xml
<CustomField>
    <fullName>Ad_Set_Id__c</fullName>
    <externalId>true</externalId>
    <label>Ad Set ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>