meta-lead-ads-package/main/default/objects/Meta_AdSet_Analytics__c/fields/Ad_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Set_Name__c</fullName>
    <label>Ad Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>